[package]
name = "evm-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abci-rs = { version = "0.11.3", features = ["async-api" ] }
async-trait = "0.1.56"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "1f69ec767927e994e3607c2f8fe0a2c020d17220" }
eyre = "0.6.8"
hex = "0.4.3"
serde_json = "1.0.82"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"
tokio = { version = "1.19.2", features = ["macros"] }
clap = { version = "3.0.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete = "3.0.4"
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "028e8884a1319987db1b2d9672ebf4ef922a524b" }
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "028e8884a1319987db1b2d9672ebf4ef922a524b" }
serde = { version = "1.0.138", features = ["derive"] }
reqwest = "0.11.11"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-error = "0.2.0"
yansi = "0.5.1"
once_cell = "1.13.0"
