[package]
name = "narwhal-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
warp = "0.3.2"
rocksdb = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
futures = "0.3.15"
eyre = "0.6.8"

bincode = "1.3.3"
hex = "0.4.3"

tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"

narwhal_primary = { package = "primary", path = "/Users/doge/Documents/cs262/reducing-latency-in-dag-bft-protocols/primary" }
narwhal_crypto = { package = "crypto", path = "/Users/doge/Documents/cs262/reducing-latency-in-dag-bft-protocols/crypto"}

serde_json = "1.0.82"

anvil-rpc = { package = "anvil-rpc", git = "https://github.com/foundry-rs/foundry" }
anvil-core = { package = "anvil-core", git = "https://github.com/foundry-rs/foundry" }
evm-abci = { path = "../evm-abci" }
ethers-core = "2.0.4"
ethers-providers = "2.0.4"
ethereum-types = "0.14.1"
