[package]
name = "node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
rand = "0.7.3"
futures = "0.3.15"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"
anyhow = "1.0.40"

config = { path = "/Users/siddhant/documents/code/reducing-latency-in-dag-bft-protocols/config" }
store = { path = "/Users/siddhant/documents/code/reducing-latency-in-dag-bft-protocols/store" }
crypto = { path = "/Users/siddhant/documents/code/reducing-latency-in-dag-bft-protocols/crypto" }
primary = { path = "/Users/siddhant/documents/code/reducing-latency-in-dag-bft-protocols/primary" }
worker = { path = "/Users/siddhant/documents/code/reducing-latency-in-dag-bft-protocols/worker" }
consensus = { path = "/Users/siddhant/documents/code/reducing-latency-in-dag-bft-protocols/consensus" }

hex = "0.4.3"
serde_json = "1.0.82"
reqwest = "0.11.11"

rocksdb = "0.16.0"
warp = "0.3.2"
serde = { version = "1.0", features = ["derive"] }

narwhal-abci = { path = "../narwhal-abci" }
evm-abci = { path = "../evm-abci" }
eyre = "0.6.8"

anvil = { git = "https://github.com/foundry-rs/foundry" }
anvil-rpc = { package = "anvil-rpc", git = "https://github.com/foundry-rs/foundry" }
yansi = "0.5.1"
ethers = { version = "2.0.4" }

[features]
benchmark = ["worker/benchmark", "primary/benchmark", "consensus/benchmark"]

[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 
required-features = ["benchmark"] 